--- a/build-boxes.yml
+++ b/build-boxes.yml
@@ -7,10 +7,11 @@
     boxes:
       - rockylinux8
       - centos7
-      - debian11
-      - debian10
-      - debian9
-      - ubuntu1804
+      - debian12
+      #- debian11
+      #- debian10
+      #- debian9
+      #- ubuntu1804
       - ubuntu2004
     versions: {}
 
