--- a/debian12/http/preseed.cfg
+++ b/debian12/http/preseed.cfg
@@ -30,10 +30,12 @@ d-i passwd/user-uid string 1000
 d-i passwd/user-password password vagrant
 d-i passwd/user-password-again password vagrant
 d-i passwd/username string vagrant
+d-i passwd/user-default-groups string users audio cdrom video sudo
 d-i pkgsel/include string sudo bzip2 acpid cryptsetup zlib1g-dev wget curl dkms make nfs-common net-tools
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
+d-i preseed/late_command string apt install -y sudo && adduser vagrant sudo
 # Prevent packaged version of VirtualBox Guest Additions being installed:
 d-i preseed/early_command string sed -i \
   '/in-target/idiscover(){/sbin/discover|grep -v VirtualBox;}' \
