--- a/shared/main.yml
+++ b/shared/main.yml
@@ -29,5 +29,6 @@
           - wget
           - curl
           - vim
+          - nano
         state: present
       when: ansible_os_family == 'Debian'
