--- a/build-boxes.yml
+++ b/build-boxes.yml
@@ -8,7 +8,8 @@
       - rockylinux8
       - centos7
       - ubuntu2004
-      - debian12      
+      #- ubuntu2404
+      - debian12   
     versions: {}
 
   tasks:
