--- a/build-boxes.yml
+++ b/build-boxes.yml
@@ -9,7 +9,8 @@
       - centos7
       - ubuntu2004
       #- ubuntu2404
-      - debian12   
+      - debian12
+      - debian12s  
     versions: {}
 
   tasks:
