--- a/centos9/http/ks3.cfg
+++ b/centos9/http/ks3.cfg
@@ -11,7 +11,7 @@ text
 # System language
 lang en_US.UTF-8
 
-%packages --ignoremissing --excludedocs
+%packages
 #@^minimal-environment
 #@headless-management
 #@system-tools
@@ -80,19 +80,3 @@ timezone America/New_York --utc
 # Root password
 rootpw vagrant
 user --name=vagrant --plaintext --password=vagrant --groups=vagrant,wheel
-
-%post
-yum update -y
-
-# update root certs
-##wget -O/tmp/ca-bundle.crt https://curl.haxx.se/ca/cacert.pem
-
-##openssl x509 -text -in /tmp/ca-bundle.crt > /dev/null && mv /tmp/ca-bundle.crt /etc/pki/tls/certs/ca-bundle.crt
-
-# sudo
-yum install -y sudo
-echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
-sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
-
-yum clean all
-%end
