--- a/build-boxes.yml
+++ b/build-boxes.yml
@@ -11,7 +11,8 @@
       - ubuntu2004
       #- ubuntu2404
       - debian12
-      - debian12s  
+      - debian12s
+      - debian12s_efi  
     versions: {}
 
   tasks:
