--- a/debian12s_efi/http/preseed.cfg
+++ b/debian12s_efi/http/preseed.cfg
@@ -11,6 +11,12 @@ d-i mirror/country string manual
 d-i mirror/http/directory string /debian
 d-i mirror/http/hostname string httpredir.debian.org
 d-i mirror/http/proxy string
+# EFI Start
+d-i partman-efi/non_efi_system boolean true
+# Ensure the partition table is GPT - this is required for EFI
+d-i partman-partitioning/choose_label select gpt
+d-i partman-partitioning/default_label string gpt
+# EFI End
 d-i partman-auto-lvm/guided_size string max
 d-i partman-auto/choose_recipe select atomic
 d-i partman-auto/method string lvm
