--- a/debian12efi/http/preseed.cfg
+++ b/debian12efi/http/preseed.cfg
@@ -48,5 +48,5 @@ apt-cdrom-setup apt-setup/cdrom/set-first boolean false
 apt-mirror-setup apt-setup/use_mirror boolean true
 popularity-contest popularity-contest/participate boolean false
 ### Package selection
-#tasksel tasksel/first multiselect standard, ssh-server
-tasksel tasksel/first multiselect standard, ssh-server, kde-desktop
+tasksel tasksel/first multiselect standard, ssh-server
+#tasksel tasksel/first multiselect standard, ssh-server, kde-desktop
