--- a/debian12kde/Vagrantfile
+++ b/debian12kde/Vagrantfile
@@ -7,14 +7,14 @@ Vagrant.configure("2") do |config|
 
   # VirtualBox.
   config.vm.define "virtualbox" do |virtualbox|
-    virtualbox.vm.hostname = "virtualbox-debian12"
-    virtualbox.vm.box = "file://builds/virtualbox-debian12.box"
-    virtualbox.vm.network :private_network, ip: "192.168.56.5"
+    virtualbox.vm.hostname = "virtualbox-debian12kde"
+    virtualbox.vm.box = "file://builds/virtualbox-debian12kde.box"
+    virtualbox.vm.network :private_network, ip: "192.168.56.25"
 
     config.vm.provider :virtualbox do |v|
       v.gui = false
-      v.memory = 1024
-      v.cpus = 1
+      v.memory = 4096
+      v.cpus = 2
       v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
       v.customize ["modifyvm", :id, "--ioapic", "on"]
     end
