--- a/debian12kde/Vagrantfile
+++ b/debian12kde/Vagrantfile
@@ -10,12 +10,15 @@ Vagrant.configure("2") do |config|
     virtualbox.vm.hostname = "virtualbox-debian12kde"
     virtualbox.vm.box = "file://builds/virtualbox-debian12kde.box"
     virtualbox.vm.network :private_network, ip: "192.168.56.25"
+    #virtualbox.vm.network "public_network"
 
     config.vm.provider :virtualbox do |v|
       v.gui = false
       v.memory = 4096
       v.cpus = 2
       v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+      #v.customize ["modifyvm", :id, "--nat???", "on"]
+      # v.customize ["modifyvm", :id, "--nic1", "natnetwork"]
       v.customize ["modifyvm", :id, "--ioapic", "on"]
     end
 
